--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord-bot-de",
+  "name": "discord-bot-eu",
   "version": "1.0.0",
   "description": "A bot",
   "main": "node index.js",
