--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   },
   "homepage": "",
   "dependencies": {
+    "@google-cloud/dialogflow": "^3.1.0",
     "discord.js": "^12.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.0.0",
     "node-fetch": "^2.6.0",
-    "@google-cloud/dialogflow": "^3.1.0",
     "node-schedule": "^1.3.2"
   }
 }
